<resources>
    <string name="app_name">TaskManagement</string>
    <string name="ten_dang_nhap">email</string>
    <string name="dang_ky">Sign Up</string>
    <string name="dang_nhap">Login</string>
    <string name="mat_khau">password</string>
    <string name="username">username</string>
    <string name="enter_username">Plese enter username</string>
    <string name="enter_password">Plese enter password</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="login_fail">Login Fail, Please try again</string>
    <string name="personal_board">Personal Board</string>
    <string name="action_notification">Notifications</string>
    <string name="action_search">Search</string>
    <string name="create_board">Create board</string>
    <string name="create">create</string>
    <string name="cancel">cancel</string>
    <string name="pick_image">Pick image</string>
    <string name="sign_out">Sign out</string>
    <string name="agree">Agree</string>
    <string name="sure_exit">Are you sure you want to exit app</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="create_list">Create list</string>
    <string name="title">Title</string>
    <string name="describe">Describe</string>
    <string name="create_card">Create Card</string>
    <string name="details">Details</string>
    <string name="task">Task</string>
    <string name="card_details">Card Details</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="card_des_empty">Click here to add describe</string>
    <string name="add_task">Add a task</string>
    <string name="tag">Tag...</string>
    <string name="deadline">Expiration date...</string>
    <string name="expires">Expires on </string>
    <string name="member">Member list</string>
    <string name="chat">Chat</string>
    <string name="add_member">Add member</string>
    <string name="member_and_chat">Member and chat</string>
    <string name="enter_member">Enter email user</string>
    <string name="already_have_member">Already has this member</string>
    <string name="no_member">No member has this email</string>
    <string name="add_success">Member successfully added</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="title_activity_board_invited">BoardInvitedActivity</string>
    <string name="invited_board">Invited Board</string>
    <string name="chat_message">Chat message</string>
    <string name="permission">You do not have permission.Please contact the administrator.</string>
    <string name="contact">Contact to administrator</string>
    <string name="general">General</string>
    <string name="please">Please wait...</string>
    <string name="logging">Logging in</string>
    <string name="regis">Registering user</string>
    <string name="dot">.</string>
    <string name="activity">Activity</string>
    <string name="added">added</string>
    <string name="to_this_card">to this card</string>
    <string name="in_this_card">in this card</string>
    <string name="has_done">has done</string>
    <string name="not_complete">not complete</string>
</resources>
