<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/action_notifi"
        android:icon="@drawable/ic_notifications_none_white_24dp"
        android:orderInCategory="50"
        android:title="@string/action_notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />
    <item
        app:showAsAction="never"
        android:title="@string/sign_out"
        android:orderInCategory="50"
        android:id="@+id/action_signout"/>
</menu>