<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    android:id="@+id/relative_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:src="@drawable/lasem"/>


        <EditText
            android:id="@+id/edittextusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="#47cccccc"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/white"
            android:hint="@string/ten_dang_nhap"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>

        <EditText
            android:id="@+id/editteampassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#47cccccc"
            android:drawableLeft="@drawable/ic_lock_outline_24dp"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/white"
            android:hint="@string/mat_khau"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonsignup"
                android:layout_width="0dp"
                android:layout_weight="4.5"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/dang_ky"
                android:textColor="@android:color/white"/>
            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="-or-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonlogin"
                android:layout_width="0dp"
                android:layout_weight="4.5"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/dang_nhap"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
