<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    android:id="@+id/relative_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="130dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginLeft="50dp"
                android:src="@drawable/img_svtest"
                android:id="@+id/imgavatainfo"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <ImageView
                android:layout_marginLeft="50dp"
                android:src="@drawable/ic_add_a_photo_white_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/buttonchonanh"
                android:background="@null"
                android:textColor="@android:color/white"
                android:text="@string/pick_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <EditText
            android:id="@+id/edittextname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="#47cccccc"
            android:drawableLeft="@drawable/ic_user_24dp"
            android:drawablePadding="16dp"
            android:drawableTint="@android:color/white"
            android:hint="@string/username"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/buttonloginmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/dang_nhap"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>
