<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/lln_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/empty"
            android:layout_width="200dp"
            android:layout_height="200dp" />
        <TextView
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_contact"
            android:layout_margin="20dp"
            android:textColor="@android:color/white"
            android:text="@string/contact"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lln_main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/listview_chat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:stackFromBottom="true"/>

        <View
            android:background="@drawable/gradient_ancent"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <EditText
                android:layout_weight="8.5"
                android:layout_width="0dp"
                android:id="@+id/edittext_chat"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/chat_message"
                android:layout_height="match_parent" />
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageButton
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_send_black_24dp"
                    android:id="@+id/button_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>