<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:descendantFocusability="blocksDescendants"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nhãn màu có thể được dùng để phân loại thẻ."
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Làm thể nào sử dụng Trello cho android trong danh sách Bắt đầu"
                android:textColor="@android:color/white"
                android:textStyle="italic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/gradient_ancent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_tag_black_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:id="@+id/textview_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:id="@+id/linear_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/tag1_item"
                            android:layout_width="45dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="6dp"
                            android:src="@drawable/tag_1"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/tag2_item"
                            android:layout_width="45dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="6dp"
                            android:src="@drawable/tag_2"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/tag3_item"
                            android:layout_width="45dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="6dp"
                            android:src="@drawable/tag_3"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/tag4_item"
                            android:layout_width="45dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="6dp"
                            android:src="@drawable/tag_4"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/tag5_item"
                            android:layout_width="45dp"
                            android:layout_height="25dp"
                            android:layout_marginEnd="6dp"
                            android:src="@drawable/tag_5"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/button_edit_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_edit_black_24dp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/gradient_ancent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_event_black_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:id="@+id/textview_deadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deadline"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/button_edit_deadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_edit_black_24dp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/gradient_ancent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_member_black_24dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center_vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/button_add_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_add_black_24dp" />
            </LinearLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_member"
            android:nestedScrollingEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_fragments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_check_black_24dp" />
</android.support.design.widget.CoordinatorLayout>